syntax = "proto3";

option csharp_namespace = "Homework.Enigmatry.Shop.VendorGrpcAPI";

package vendor;


service Vendor {
  rpc IsArticleExist (ArticleRequest) returns (ArticleExistReply);
  rpc GetArticle (ArticleRequest) returns (ArticleReply);
}

message ArticleRequest {
  int32 id = 1;
}


message ArticleReply {
  int32 id = 1;
  string name = 2;
  double price = 3;
  OperationStatus status=4;
}

message ArticleExistReply {
  OperationStatus status=1;
}


enum OperationStatus{
	SUCCESS=0;
	NOT_FOUND=1;
}
